--- a/PRI_signal.ini
+++ b/PRI_signal.ini
@@ -8,3 +8,13 @@ sim_signal = 1 50 2 100
              3 70 2 100
              4 80 2 150
              5 60 2 120
+norm_signal = 1 48 52 100
+              2 88 92 200
+              3 68 72 100
+              4 78 82 150
+              5 58 62 120
+rayleigh_signal = 1 1 100
+                  2 5 200
+                  3 10 100
+                  4 15 150
+                  5 20 120
