--- a/PRI_signal.ini
+++ b/PRI_signal.ini
@@ -18,3 +18,13 @@ rayleigh_signal = 1 1 100
                   3 10 100
                   4 15 150
                   5 20 120
+stagger_signal_disorder = 1 500 100
+                          2 900 200
+                          3 700 100
+                          4 800 150
+                          5 600 120
+stagger_signal_isorder = 1 50 100
+                         2 90 200
+                         3 70 100
+                         4 80 150
+                         5 60 120
